2007-01-19  Emmanuele Bassi  <ebassi@openedhand.com>

	Allow the ClutterGroup subclasses to override the add and
	remove operations.

	* clutter/clutter-group.c: Move the add and remove code from
	clutter_group_add() and clutter_group_remove() to the signal
	class closures; make the "add" and "remove" signals as
	RUN_FIRST.

2007-01-19  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.h.: 
	* clutter/clutter-fixed.c:
	Added fast double to int and double to fixed point conversion
	routines; changed CLUTTER_FLOAT_TO_FIXED to use it.
	Replaced clutter_sqrti with fixed point implementation of the QIII
	algorithm.
	

	* clutter/clutter-behavior-path.c: use clutter_sqrti always

	* clutter/clutter-alpha.c: 
	(sinc_func): replaced double -> int cast with CLUTTER_FLOAT_TO_INT
	
	
2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Post release bump to 0.3.0.

2007-01-18 =============== 0.2 Release ================================

2007-01-18  Matthew Allum  <mallum@openedhand.com>

	* clutter.doap:
	Update for 0.2 release

2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-group.h: Add public functions
	clutter_group_get_n_children() and clutter_group_get_nth_child().

	* clutter/clutter-behaviour.h:
	* clutter/clutter-behaviour.c: Fix header alignment; fix argument
	name for apidoc.

2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/Makefile.am: Use the build dir when linking to the
	internal pango clutter renderer.

2007-01-18  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.h: fixed a typo in comment
	
2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-fixed.h: Remove some inline documentation to
	make the header more readable.

	* clutter/clutter-behaviour.c: The actors are store inside a
	GSList and not in a GList, so change the list operations to
	use the right API.

2007-01-18  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-color.c: